XMLtoCSV/objects/unpackaged/objects/Benefit_Design_vod__c.object
<CustomObject>
    <description>Benefit Design represents a Benefit Design for a specific Managed Care (Payer) account. There may be multiple Benefit Designs for a particular account. Benefit Design Line is a child object of Benefit Design.</description>
    <fields>
        <fullName>Account_Name_vod__c</fullName>
        <description>The textual name of the Account accessed through a Formula field based upon the Account_vod__c relationship.  This field is leveraged by the Prescriber Level Formulary control for VMobile.</description>
        <formula>Account_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that this Benefit Design belongs to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Designs</relationshipLabel>
        <relationshipName>Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Last_Modified_vod__c</fullName>
        <description>Last modification of a child related to this row of data.</description>
        <label>Child Last Modified</label>
        <summarizedField>Benefit_Design_Line_vod__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Benefit_Design_Line_vod__c.Benefit_Design_vod__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used only for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lives_vod__c</fullName>
        <description>Number of lives covered by this benefit design. This number displays in the formulary viewer.</description>
        <label>#lives</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Design_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Benefit Design takes its formulary information from another Benefit Design, then this field points to that controlling benefit design.</description>
        <label>Parent Design</label>
        <referenceTo>Benefit_Design_vod__c</referenceTo>
        <relationshipLabel>Benefit Designs</relationshipLabel>
        <relationshipName>Parent_Design_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_Id_vod__c</fullName>
        <description>The textual name of the Account&apos;s Payer Id value accessed through a Formula field based upon the Account_vod__c relationship.  This field is leveraged by the Prescriber Level Formulary control for VMobile.</description>
        <formula>Account_vod__r.Payer_Id_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Lives_vod__c</fullName>
        <description>The percentage of lives (for this account) that are covered by this plan. Gives a relative indication of the importance of this plan within the account. Percent Lives is not a calculated field and is not kept in sync with #of lives.</description>
        <label>Percent Lives</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Benefit_Design_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates this is the primary benefit design for the account.  This field is leveraged n the Prescriber Level Formulary control for VMobile.</description>
        <label>Primary Benefit Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>The value in the type field (Commercial, VA, Medicaid, etc.) is cascaded down to the Benefit Design Lines and controls what Status and Restrictions are valid. If this type field is changed, it will cascade down to the Benefit Design Lines.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Benefit Design</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>